--- a/fuchion/src/app/menu/menu.component.html
+++ b/fuchion/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid background" data-aos="fade-down" style="background-image: url('assets/img/cafe-menu-cartoon-restaurant-restaurant-menu-cover-design-material-removebg-preview.png');">
+<div class="container-fluid background" data-aos="fade-down">
   <div class="row row-content">
     <div class="col-12">
         <ul class="nav nav-tabs nav-justified" role="tablist">
